- Started work on user property setting and display - Added an eval component for display expression results

--- a/src/main/webapp/css/personalization.css
+++ b/src/main/webapp/css/personalization.css
@@ -4,8 +4,8 @@
 
 .bodywrapper .personalizationbox {
  overflow: hidden;
- background :#eaeaea url(images/targeting-overlay.png) top left;
- color:#f00;
+ background : url(images/targeting-overlay.png) top left;
  border: 3px dashed #ccc;
+ padding: 5px;
  font-weight:bold;
 }
