--- a/src/main/webapp/css/personalization.css
+++ b/src/main/webapp/css/personalization.css
@@ -5,12 +5,19 @@
 .bodywrapper .personalizationbox {
  overflow: hidden;
  background : url(images/targeting-overlay.png) top left;
- border: 3px dashed #ccc;
+ border: 1px solid #ccc;
  padding: 5px;
- font-weight:bold;
+ margin:1em 0;
 }
 
-#map_canvas {
+.bodywrapper #map_canvas {
     width: 100%;
     height:400px;
+}
+
+.bodywrapper .personalizationbox .button-placeholder{
+	display:none
+}
+.bodywrapper .personalizationbox .x-border{
+	border:none;
 }
