--- a/src/main/webapp/css/personalization.css
+++ b/src/main/webapp/css/personalization.css
@@ -23,67 +23,83 @@
 }
 
 .panel_button {
-	margin-left: auto;
-	margin-right: auto;
-	position: absolute;
-	top: 1px;
-	width: 173px;
-	height: 54px;
-	background: url(images/panel/panel_button.png);
-	filter:alpha(opacity=70);
-	-moz-opacity:0.70;
-	-khtml-opacity: 0.70;
-	opacity: 0.70;
+    float:left;
+    position: relative;
+    background: black;
+    padding: 10px;
+	filter:alpha(opacity=90);
+	-moz-opacity:0.90;
+	-khtml-opacity: 0.90;
+	opacity: 0.90;
 	cursor: pointer;
-    z-index: 10000;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    -moz-border-radius-topleft: 5px;
+    -moz-border-radius-bottomleft: 5px;
+    -webkit-border-top-left-radius: 5px;
+    -webkit-border-bottom-left-radius: 5px;
 }
 .panel_button img {
 	position: relative;
-	top: 10px;
 	border: none;
 }
 .panel_button a {
 	text-decoration: none;
-	color: #545454;
-	font-size: 20px;
+	color: white;
+	font-size: 12px;
 	font-weight: bold;
 	position: relative;
 	top: 5px;
 	left: 10px;
 	font-family: Arial, Helvetica, sans-serif;
 }
+
 .panel_button a:hover {
-	color: #999999;
+	color: yellow;
+}
+
+.panel_button a:visited {
+	color: #f5f5f5;
+}
+
+.panel_button a:active {
+	color: #f5f5f5;
 }
 
 #toppanel {
 	position: fixed;
-    top: 0px;
-	width: 900px;
-	left: 0px;
+    border: 0px;
+    padding: 0px;
+    margin: 0px;
+    top: 20px;
+	right: 0px;
 	text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    z-index: 10000;
+    z-index: 999;
 }
 #panel {
-	width: 900px;
+	width: 0px;
 	position: relative;
-	top: 1px;
-	height: 0px;
-	margin-left: auto;
-	margin-right: auto;
-	overflow: hidden;
+	top: 0px;
+	height: 500px;
+	overflow: scroll;
 	text-align: left;
 }
-#panel_contents {
+#panel .contents {
 	background: black;
-	filter:alpha(opacity=70);
-	-moz-opacity:0.70;
-	-khtml-opacity: 0.70;
-	opacity: 0.70;
-	height: 100%;
-	width: 904px;
+    padding: 10px;
+    color: white;
+	filter:alpha(opacity=90);
+	-moz-opacity:0.90;
+	-khtml-opacity: 0.90;
+	opacity: 0.90;
+	width: 280px;
+    margin: 0px;
 	position: absolute;
-    overflow: scroll;
+}
+
+#panel .contents h2 {
+    margin-top: 10px;
+    margin-bottom : 5px;
+    border-bottom: thin;
+    border-color: white;
 }
