--- a/src/main/webapp/css/personalization.css
+++ b/src/main/webapp/css/personalization.css
@@ -83,9 +83,6 @@
 	position: relative;
 	top: 0px;
 	text-align: left;
-    height: 700px;
-    overflow-x: hidden;
-    overflow-y: scroll;
     scrollbar-base-color: #000000;
     scrollbar-face-color: #000000;
     scrollbar-track-color: #000000;
@@ -94,6 +91,7 @@
     scrollbar-shadow-color: #000000;
     scrollbar-darkshadow-color: #000000;
     scrollbar-arrow-color: #FF9900;
+
 }
 #panel .contents {
 	background: black;
@@ -106,6 +104,14 @@
 	width: 280px;
     margin: 0px;
 	position: absolute;
+          -webkit-border-radius: 0px 0px 0px 10px; /* Saf3-4, iOS 1-3.2, Android ≤1.6 */
+     -moz-border-radius: 0px 0px 0px 10px; /* FF1-3.6 */
+          border-radius: 0px 0px 0px 10px; /* Opera 10.5, IE9, Saf5, Chrome, FF4, iOS 4, Android 2.1+ */
+}
+#panel .contentsscroll {
+     overflow-x: hidden;
+    overflow-y: scroll;
+    height: 500px;
 }
 
 #panel .contents h2 {
@@ -113,6 +119,9 @@
     font-size: 1em;
     margin-top: 10px;
     margin-bottom: 5px;
+}
+#panel .contents ul {
+    margin-left: 20px;
 }
 
 #panel .contents a:link {
