--- a/src/main/webapp/css/personalization.css
+++ b/src/main/webapp/css/personalization.css
@@ -25,14 +25,12 @@
 .panel_button {
     display:inline;
     float:left;
-    position: relative;
     background: black;
     padding: 10px;
 	filter:alpha(opacity=90);
 	-moz-opacity:0.90;
 	-khtml-opacity: 0.90;
 	opacity: 0.90;
-	cursor: pointer;
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
     -moz-border-radius-topleft: 5px;
@@ -41,7 +39,6 @@
     -webkit-border-bottom-left-radius: 5px;
 }
 .panel_button img {
-	position: relative;
 	border: none;
 }
 .panel_button a {
@@ -73,15 +70,15 @@
     padding: 0px;
     margin: 0px;
     top: 20px;
-	right: 0px;
+	right: -300px;
 	text-align: center;
+    width: 352px;
     z-index: 999;
 }
 #panel {
     display:inline;
+    float:left;
 	width: 300px;
-	position: relative;
-	top: 0px;
 	text-align: left;
     scrollbar-base-color: #000000;
     scrollbar-face-color: #000000;
@@ -97,16 +94,16 @@
 	background: black;
     padding: 10px;
     color: white;
-	filter:alpha(opacity=90);
-	-moz-opacity:0.90;
-	-khtml-opacity: 0.90;
+	filter:alpha(opacity=80);
+	-moz-opacity:0.80;
+	-khtml-opacity: 0.80;
 	opacity: 0.90;
 	width: 280px;
     margin: 0px;
 	position: absolute;
-          -webkit-border-radius: 0px 0px 0px 10px; /* Saf3-4, iOS 1-3.2, Android ≤1.6 */
-     -moz-border-radius: 0px 0px 0px 10px; /* FF1-3.6 */
-          border-radius: 0px 0px 0px 10px; /* Opera 10.5, IE9, Saf5, Chrome, FF4, iOS 4, Android 2.1+ */
+    -webkit-border-radius: 0px 0px 0px 10px; /* Saf3-4, iOS 1-3.2, Android ≤1.6 */
+    -moz-border-radius: 0px 0px 0px 10px; /* FF1-3.6 */
+    border-radius: 0px 0px 0px 10px; /* Opera 10.5, IE9, Saf5, Chrome, FF4, iOS 4, Android 2.1+ */
 }
 #panel .contentsscroll {
      overflow-x: hidden;
