remove Css to hide place holder

--- a/src/main/webapp/css/personalization.css
+++ b/src/main/webapp/css/personalization.css
@@ -15,9 +15,9 @@
     height:400px;
 }
 
-.bodywrapper .personalizationbox .button-placeholder{
+/*.bodywrapper .personalizationbox .button-placeholder{
 	display:none
-}
+}*/
 .bodywrapper .personalizationbox .x-border{
 	border:none;
 }
